<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/results_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/results_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/topOverall"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:text="@string/top_overall"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fastestTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/fastest" />

        <TextView
            android:id="@+id/fastest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mostAccurateTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/most_accurate" />

        <TextView
            android:id="@+id/mostAccurate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/qwertyTag"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:text="@string/qwerty"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TypingSpeedTagQ"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/typing_speed" />

        <TextView
            android:id="@+id/TypingSpeedQ"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AccuracyQTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/accuracy" />

        <TextView
            android:id="@+id/AccuracyQ"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/dvorakTag"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:text="@string/dvorak"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TypingSpeedDTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/typing_speed" />

        <TextView
            android:id="@+id/TypingSpeedD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AccuracyDTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/accuracy" />

        <TextView
            android:id="@+id/AccuracyD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/messageaseTag"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:text="@string/messagease"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TypingSpeedMTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/typing_speed" />

        <TextView
            android:id="@+id/TypingSpeedM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AccuracyMTag"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/accuracy" />

        <TextView
            android:id="@+id/AccuracyM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>