<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.keyboardlayoutcomparison.MainActivity">

    <TextView
        android:id="@+id/qwerty_intro_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/qwerty_title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/qwerty_instruction"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:gravity="center"
            android:lineSpacingExtra="5sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/qwerty_instruction"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/qwerty_select_box"
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:hint="@string/check_active_keyboard_box"
                android:includeFontPadding="false"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="159dp"
                android:layout_height="157dp"
                android:layout_weight="1"
                android:src="@drawable/keyboard_select_screenshot"
                android:contentDescription="TODO" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/keyboard_select_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:text="@string/check_active_keyboard_instruction" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/begin_qwerty"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:background="#096159"
            android:onClick="clickStart"
            android:text="@string/begin_qwerty" />
    </LinearLayout>

</LinearLayout>